# cli_utils

./: .gitignore  .scripts-info.md  404.html  CHANGELOG.md  INSTALL.md  MAKEFILE_GUIDE.md  Makefile  QUICK_REFERENCE.md  README.md  cli_utils.code-workspace  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml  todo-reminder.service
.github/workflows/: docs.yml
api/commands/: index.html
api/config/: index.html
api/core/: index.html
docs/: SHELL_ALIASES.md  TECHNICAL_NOTES.md
examples/api-commands/: index.html
examples/clipboard/: index.html
examples/devtools/: index.html
examples/icons/: index.html
examples/text-utils/: index.html
examples/todo-app/: index.html
getting-started/installation/: index.html
getting-started/quickstart/: index.html
reference/api-commands/: index.html
reference/commands/: index.html
reference/makefile/: index.html
reference/quick-reference/: index.html
reference/scripts/: index.html
reference/shell-aliases/: index.html
reference/technical-notes/: index.html
scripts/: check_nerdfonts.py  cli-utils  migrate_category_icons.py  quickstart.sh  shell-aliases.sh  test_icons.py
search/: search_index.json
src/cli_utils/: __init__.py  __main__.py  config.py  main.py
src/cli_utils/core/: plugin_loader.py
src/cli_utils/utils/: __init__.py  clipboard.py  common_options.py  directory_handler.py  file_picker.py  icons.py  nerd_font_check.py  output_handler.py
src/docs/: index.md
src/docs/api/: commands.md  config.md  core.md
src/docs/examples/: api-commands.md  clipboard.md  devtools.md  icons.md  text-utils.md  todo-app.md
src/docs/getting-started/: installation.md  quickstart.md
src/docs/reference/: api-commands.md  commands.md  makefile.md  quick-reference.md  scripts.md  shell-aliases.md
src/docs/user-guide/: adding-commands.md  command-groups.md  common-utilities.md  configuration.md
src/tests/: conftest.py
src/tests/test_commands/: test_text_utils.py
src/tests/test_core/: test_config.py  test_icons.py  test_nerd_font_check.py
user-guide/adding-commands/: index.html
user-guide/command-groups/: index.html
user-guide/common-utilities/: index.html
user-guide/configuration/: index.html
(+22 files in other folders)
